<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@drawable/border_gral"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/flUpdated"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:background="@drawable/updated_task" />

        <FrameLayout
            android:id="@+id/flNoteParcialSave"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:background="@drawable/parcial_task" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.com.pendulum.utilities.views.CustomTextView
                        style="@style/tsk_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/id"
                        app:typeFace="@string/font_bold" />

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/txt_id"
                        style="@style/tsk_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/textView32"
                        style="@style/tsk_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tsk_Responsable"
                        app:typeFace="@string/font_bold" />

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/txt_tsk_responsble"
                        style="@style/tsk_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/textView40"
                        style="@style/tsk_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/tsk_De"
                        app:typeFace="@string/font_bold" />

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/txt_tsk_de"
                        style="@style/tsk_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/textView48"
                        style="@style/tsk_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tsk_Fecha_inicio"
                        app:typeFace="@string/font_bold" />

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/txt_tsk_fecha_inicio"
                        style="@style/tsk_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/flEstatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/textView36"
                        style="@style/tsk_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/tsk_Estado"
                        app:typeFace="@string/font_bold" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="5dp" />

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/txt_tsk_estado"
                        style="@style/tsk_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle"
                        android:gravity="center"
                        android:minWidth="70dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/White"
                        android:textSize="13sp"
                        app:typeFace="@string/font_bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/textView33"
                        style="@style/tsk_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tsk_Solicitante"
                        android:textStyle="bold"
                        app:typeFace="@string/font_bold" />

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/txt_tsk_solicita"
                        style="@style/tsk_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-1dp"
                        android:ellipsize="end"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/textView38"
                        style="@style/tsk_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="-1dp"
                        android:text="@string/tsk_Actividad"
                        app:typeFace="@string/font_bold" />

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/txt_tsk_actividad"
                        style="@style/tsk_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llCredJui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/tvCredJui"
                        style="@style/tsk_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/tsk_Credito"
                        app:typeFace="@string/font_bold" />

                    <mx.com.pendulum.utilities.views.CustomTextView
                        android:id="@+id/txt_tsk_credito"
                        style="@style/tsk_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <mx.com.pendulum.utilities.views.CustomTextView
                style="@style/tsk_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tsk_acreditado"
                app:typeFace="@string/font_bold" />

            <mx.com.pendulum.utilities.views.CustomTextView
                android:id="@+id/txt_tsk_acreditado"
                style="@style/tsk_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <mx.com.pendulum.utilities.views.CustomTextView
                style="@style/tsk_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tsk_Asunto"
                app:typeFace="@string/font_bold" />

            <mx.com.pendulum.utilities.views.CustomTextView
                android:id="@+id/txt_tsk_asunto"
                style="@style/tsk_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/Black"
                app:typeFace="@string/font_bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSubAsunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <mx.com.pendulum.utilities.views.CustomTextView
                style="@style/tsk_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tsk_SubAsunto"
                app:typeFace="@string/font_bold" />

            <mx.com.pendulum.utilities.views.CustomTextView
                android:id="@+id/txt_tsk_sub_asunto"
                style="@style/tsk_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/Black"
                app:typeFace="@string/font_bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <mx.com.pendulum.utilities.views.CustomTextView
                style="@style/tsk_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tsk_Fecha_compromiso"
                app:typeFace="@string/font_bold" />

            <mx.com.pendulum.utilities.views.CustomTextView
                android:id="@+id/txt_tsk_fecha_comp"
                style="@style/tsk_row"
                android:textColor="@color/Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                app:typeFace="@string/font_bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <mx.com.pendulum.utilities.views.CustomTextView
                style="@style/tsk_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tsk_descripci_n"
                app:typeFace="@string/font_bold" />

            <mx.com.pendulum.utilities.views.CustomTextView
                android:id="@+id/txt_tsk_descr"
                style="@style/tsk_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp" />
        </LinearLayout>


        <mx.com.pendulum.utilities.views.CustomTextView
            android:id="@+id/txt_respdinamicas"
            style="@style/tsk_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:visibility="gone" />

    </LinearLayout>


</FrameLayout>